# SagoDbStructSync

./: .gitignore  CMakeLists.txt  LICENSE  README.md  travis_build.script
.github/workflows/: main.yml
extra/docker/: Dockerfile.MySQL.IntegrationTest  Dockerfile.Ubuntu16.04.build  Dockerfile.sqlite.IntegrationTest
extra/docker/mysql/: mysqltest.json  mysqltest.sh
extra/docker/sqlite/: moviedb.json  sqlite.sh
include/: json_struct.h
src/: dbsync.cpp
src/sago/: DbSyncDbMySql.cpp  DbSyncDbMySql.hpp  DbSyncDbOracle.cpp  DbSyncDbOracle.hpp  DbSyncDbPostgres.cpp  DbSyncDbPostgres.hpp  DbSyncDbSqlite.cpp  DbSyncDbSqlite.hpp  DbSyncValidator.cpp  DbSyncValidator.hpp  dbsync.cpp  dbsync.hpp  dbsync_db.cpp  dbsync_db.hpp
test/: CMakeLists.txt  basictest.cpp  mysqltest.cpp  validatortest.cpp
